--- a/src/widgets/tabwidget.ui
+++ b/src/widgets/tabwidget.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QPlainTextEdit" name="chatBox"/>
+    <widget class="QTextBrowser" name="chatBox"/>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -30,7 +30,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton">
+      <widget class="QPushButton" name="sendB">
        <property name="text">
         <string>SEND</string>
        </property>
